--- a/Crud.Api/appsettings.json
+++ b/Crud.Api/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=opinionsdb;Username=tosinadewole;Password=Bamiji#1998"
+    "Default": ""
   },
   "Jwt": {
-    "Key": "mypersonalprojects",
+    "Key": "",
     "Issuer": "OpinionsApi",
     "Audience": "OpinionsClient",
     "ExpiresInMinutes": 60
